<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_derivatives"
            android:icon="@drawable/ic_exposure_black_24dp"
            android:title="@string/ScientificCalculator"/>
        <item
            android:id="@+id/nav_matrix"
            android:icon="@drawable/ic_matrix"
            android:title="@string/Матрицы"/>
        <item
            android:id="@+id/nav_vectors"
            android:icon="@drawable/ic_vectors"
            android:title="@string/Векторы"/>
        <item
            android:id="@+id/nav_formulas"
            android:icon="@drawable/ic_font_download_black_24dp"
            android:title="@string/formulas"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/history"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/share"/>
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_stars_black_24dp"
            android:title="@string/rate"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/about"/>
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/exit"/>
    </group>
</menu>
