<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settLL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252525"
    android:orientation="vertical"
    tools:context=".ui.Settings">

    <LinearLayout
        android:id="@+id/reportLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#252525"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/reportText"
            android:layout_width="match_parent"
            android:layout_height="615dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/tell_of_issue"
            android:inputType="textMultiLine"
            android:textColor="#FFFFFF"
            android:textColorHint="#B8B8B8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/goBack"
                android:layout_width="57dp"
                android:layout_height="46dp"
                android:layout_marginLeft="10dp"
                android:backgroundTint="#252525"
                android:src="@drawable/ic_keyboard_backspace_black_24dp" />

            <Button
                android:id="@+id/sendReportBut"
                android:layout_width="167dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:backgroundTint="#2196F3"
                android:text="@string/send_report_but"
                android:textColor="#000000"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/pickFileBut"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:src="@drawable/ic_attach_file_black_24dp" />

            <ImageButton
                android:id="@+id/unattachFileBut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:src="@drawable/ic_close_black_24dp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/imageLoaded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:src="@drawable/ic_image_black_24dp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check_black_24dp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView40"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/go_back"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="193dp"
                android:text="@string/image_loaded"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_theme" />

        <LinearLayout
            android:layout_width="274dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/darkThBtn"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#00333333"
                android:paddingLeft="20dp"
                android:text="@string/sett_dark_theme"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tV2"
                android:layout_width="263dp"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/sett_changing_bg"
                android:textColor="#B4B4B4" />
        </LinearLayout>

        <Switch
            android:id="@+id/darkThSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#00000000"
            android:backgroundTint="#00B93333"
            android:checked="true"
            android:thumbTint="#FFC107" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imDec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_exposure_neg_2_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/dec_btn"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#00FFFFFF"
                android:paddingLeft="20dp"
                android:text="@string/sett_numb_dec"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tV3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/sett_setting_num_symb"
                android:textColor="#B4B4B4" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imVib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_vibration_black_24dp" />

        <LinearLayout
            android:layout_width="275dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/vibrBtn"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#00FFFFFF"
                android:paddingLeft="20dp"
                android:text="@string/sett_vibration"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tV4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/sett_set_vibration"
                android:textColor="#B4B4B4" />
        </LinearLayout>

        <Switch
            android:id="@+id/vibSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:checked="true"
            android:thumbTint="#FFC107" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imRes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_default_settings" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/resetSettBtn"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#00FFFFFF"
                android:paddingLeft="20dp"
                android:text="@string/sett_discharge"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tV5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/sett_discharge_all_settings"
                android:textColor="#B4B4B4" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imRep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_error_outline_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/reportBut"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#00FFFFFF"
                android:paddingLeft="20dp"
                android:text="@string/sett_report"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tV6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/sett_report_of_issue"
                android:textColor="#B4B4B4" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>